# Nexus

./: .gitignore  README.md  README_zh.md  pyproject.toml  当前目标
.manual/: state.json
.nexus/: state.json
docs/: aios_task_checklist.md  architecture.md  file_inventory.md  product_vision.md  roadmap.md
docs/superpowers/plans/: 2026-07-17-mcp-client.md
docs/superpowers/specs/: 2026-07-17-mcp-client-design.md
src/nexus/: __init__.py  cli.py  config.py  embeddings.py  llm.py  planning.py  rag.py  service.py  store.py  vector_store.py
src/nexus/integrations/: __init__.py  core.py  manager.py  personal_tools.py  web_tools.py
src/nexus/mcp/: __init__.py  audit.py  client.py  config.py  manager.py  models.py
tests/: test_cli.py  test_integrations.py  test_mcp.py  test_mcp_cli.py  test_mcp_gateway.py  test_mcp_http.py  test_mcp_planning.py  test_mcp_stdio.py
tests/fixtures/: mcp_echo_server.py  mcp_http_server.py
