[project]
name = "nexus-lifeagent"
version = "0.1.0"
description = "A proactive personal AI assistant with long-term memory, daily planning, and reflection."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Bingnan Ma" }
]

[project.optional-dependencies]
rag = [
  "qdrant-client[fastembed]>=1.14.2,<2",
]

[project.scripts]
nexus = "nexus.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
