[project]
name = "nexus-lifeagent"
version = "0.1.0"
description = "A proactive personal AI assistant with memory, planning, reflection, RAG, and permissioned real tools."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Bingnan Ma" }
]

[project.optional-dependencies]
rag = [
  "qdrant-client[fastembed]>=1.14.2,<2",
]
tools = [
  "icalendar>=6,<7",
  "recurring-ical-events>=3.8,<4",
]

[project.scripts]
nexus = "nexus.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
